Fix var for cme and mongo_db

--- a/roles/MONGO/templates/script.js.j2
+++ b/roles/MONGO/templates/script.js.j2
@@ -1,5 +1,5 @@
 db.getCollection('urls')
-.find({"url": /{{ sourceurl }}/})
-.forEach(function(e,i) {e.url=e.url.replace("{{ sourceurl }}", "{{ targeturl }}");
+.find({"url": /{{ mongo_sourceurl }}/})
+.forEach(function(e,i) {e.url=e.url.replace("{{ mongo_sourceurl }}", "{{ mongo_targeturl }}");
 db.getCollection('urls').save(e);
 });
